<resources>
    <string name="app_name">AND1-TodoApp</string>
    <string name="todoapp">TodoAPP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="my_todos">My Todos</string>
    <string name="add_todo">ADD TODO</string>
    <string name="todo_name">Todo Name</string>
    <string name="description">Description</string>
    <string name="dealine">Dealine</string>
    <string name="done">Done</string>
    <string name="create_todo">Create To Do</string>
    <string name="my_boards">My Boards</string>
    <string name="create_board">Create Board</string>
    <string name="my_friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="nickname">Nickname</string>
    <string name="your_nickname">Your Nickname</string>
    <string name="mytodos">My Todos</string>
    <string name="todo_title">Todo Title</string>
    <string name="todo_deadline">Select Deadline:</string>
    <string name="todo_description">Description</string>
    <string name="date">Date</string>
    <string name="select_board">Select Board:</string>
    <string name="select_member">Select Member:</string>
    <string name="select_reminder">Select Reminder:</string>
    <string name="board_owner">Owner</string>
    <string name="board_description">Description</string>
    <string name="board_name">Board Name</string>
    <string name="hello_empty_fragment">There is nothing here :)</string>
    <string name="welcome">Welcome!</string>
    <string name="board_title">Board Title</string>
</resources>