<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation.xml"
    app:startDestination="@+id/fragment_welcome">

    <fragment
        android:id="@+id/fragment_create_todo"
        android:name="com.example.and1_todoapp.Fragments.CreateTodoFragment"
        android:label="@string/create_todo"/>

    <fragment
        android:id="@+id/fragment_create_board"
        android:name="com.example.and1_todoapp.Fragments.CreateBoardFragment"
        android:label="@string/create_board"/>

    <fragment
        android:id="@+id/fragment_blank"
        android:name="com.example.and1_todoapp.Fragments.EmptyFragment"
        android:label="@string/hello_empty_fragment"/>

    <fragment
        android:id="@+id/menu_myBoards"
        android:name="com.example.and1_todoapp.Fragments.BoardsFragment"
        android:label="@string/my_boards"/>

    <fragment
        android:id="@+id/menu_myTodos"
        android:name="com.example.and1_todoapp.Fragments.TodosFragment"
        android:label="@string/my_todos"/>

    <fragment
        android:id="@+id/menu_friends"
        android:name="com.example.and1_todoapp.Fragments.MembersFragment"
        android:label="My Friends"/>

    <fragment
        android:id="@+id/fragment_welcome"
        android:name="com.example.and1_todoapp.Fragments.WelcomeFragment"
        android:label="@string/welcome"/>

</navigation>